--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,19 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/oauth2": "^8.2.0",
     "@prisma/client": "^6.19.1",
+    "axios": "^1.13.5",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
+    "jsonwebtoken": "^9.0.3",
+    "nodemailer": "^8.0.1",
     "prisma": "^6.19.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^7.0.9",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
   }
