--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/oauth2": "^8.2.0",
+    "@fastify/websocket": "^11.2.0",
     "@prisma/client": "^6.19.1",
     "axios": "^1.13.5",
     "dotenv": "^17.2.3",
