feat: modernize login UI with floating design, fix fonts, and clean up codebase

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-# dependencies
 node_modules/
-
-# env files
 .env
-.env.*
-
-# build outputs
+.env.local
 dist/
-.next/
+build/
+*.log
+.DS_Store
+.vscode/
+.idea/
+docs/
