--- a/backend/package.json
+++ b/backend/package.json
@@ -3,25 +3,36 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "reset-db": "node reset-database.js"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^11.2.0",
+    "@fastify/helmet": "^13.0.2",
     "@fastify/oauth2": "^8.2.0",
+    "@fastify/rate-limit": "^10.3.0",
     "@fastify/websocket": "^11.2.0",
     "@prisma/client": "^6.19.1",
     "axios": "^1.13.5",
+    "bcrypt": "^5.1.1",
+    "bull": "^4.16.5",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
+    "ioredis": "^5.9.3",
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^8.0.1",
-    "prisma": "^6.19.1"
+    "prisma": "^6.19.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^7.0.9",
+    "fastify-type-provider-zod": "^6.1.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
   }
