--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "yjs": "^13.6.29"
   },
   "devDependencies": {
     "@types/qrcode": "^1.5.6",
