--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,15 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.0",
     "html2canvas": "^1.4.1",
+    "konva": "^9.3.22",
     "lucide-react": "^0.487.0",
     "motion": "^11.18.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-konva": "^18.2.14",
     "react-router-dom": "^7.1.3",
     "socket.io-client": "^4.8.3",
     "sonner": "^2.0.3",
